--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section>
     <h2>About Me</h2>
     <p>Experienced Network Engineer with 8+ years in enterprise network & cloud infrastructure. Skilled in BGP, OSPF, Azure, Cisco, Juniper, F5, and scripting. Currently working at LTIMindtree as a Senior Consultant.</p>
-    <a href="SubramanyamMuthyala - Resume.pdf" class="resume-button" download>Download Resume</a>
+    <a href="resume.pdf" class="resume-button" download>Download Resume</a>
   </section>
 
   <section>
