--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Experienced Network Engineer with 8+ years in enterprise network & cloud infrastructure. Skilled in BGP, OSPF, Azure, Cisco, Juniper, F5, and scripting. Currently working at LTIMindtree as a Senior Consultant.</p>
+    <p>Experienced IT Infrastructure & Cloud Professional with over 7 years of experience in networking, system administration, and cloud environments (Azure & AWS). Skilled in troubleshooting, break-fix support, deployments, patching, and automation. Proficient in managing on-prem and cloud-based infrastructures, implementing enterprise-grade solutions, and optimizing system performance and security.</p>
     <a href="resume.pdf" class="resume-button" download>Download Resume</a>
   </section>
 
