--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
   <section>
     <h2>Skills</h2>
     <ul>
-      <li>Routing & Switching (BGP, OSPF, MPLS)</li>
+      <li>Networking:
+          Routing & Switching (BGP, OSPF, VLAN, STP)
+          MPLS, LAN/WAN, WLAN, DNS, DHCP
+          Firewall Configuration (Azure NSG, FortiGate, Palo Alto)
+          VPN Setup & Management
+          IP Address Management (Infoblox)</li></ul>
+      <ul> 
       <li>Azure (VNET Peering, ExpressRoute, NSGs)</li>
       <li>Load Balancers: F5 | WAN Optimizers: Riverbed</li>
       <li>Scripting: PowerShell, Python</li>
