--- a/index.html
+++ b/index.html
@@ -63,18 +63,67 @@
 
   <section>
     <h2>Skills</h2>
+  </section>
+
+<section>
+    <h3>Networking</h3>
     <ul>
-      <li>Networking:
-          Routing & Switching (BGP, OSPF, VLAN, STP)
-          MPLS, LAN/WAN, WLAN, DNS, DHCP
-          Firewall Configuration (Azure NSG, FortiGate, Palo Alto)
-          VPN Setup & Management
-          IP Address Management (Infoblox)</li></ul>
-      <ul> 
-      <li>Azure (VNET Peering, ExpressRoute, NSGs)</li>
-      <li>Load Balancers: F5 | WAN Optimizers: Riverbed</li>
-      <li>Scripting: PowerShell, Python</li>
-      <li>Monitoring Tools: SolarWinds, Cisco Prime, Grafana</li>
+      <li>Routing & Switching (BGP, OSPF, VLAN, STP)</li>
+      <li>MPLS, LAN/WAN, WLAN, DNS, DHCP</li>
+      <li>Firewall Configuration (Azure NSG, FortiGate, Palo Alto)</li>
+      <li>VPN Setup & Management</li>
+      <li>IP Address Management (Infoblox)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Cloud Technologies</h3>
+    <ul>
+      <li>Microsoft Azure (VMs, VNet Peering, ExpressRoute, Virtual WAN)</li>
+      <li>Azure AD, NSG, Load Balancer, Azure Monitor, Log Analytics</li>
+      <li>Azure Backup & Snapshot Management</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Infrastructure & System Administration</h3>
+    <ul>
+      <li>Break Fixes, Deployments, Patching</li>
+      <li>Health Checks and Firmware Updates</li>
+      <li>Network Configuration Management</li>
+      <li>Failover & Disaster Recovery</li>
+      <li>Backup & Restore Operations</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Tools & Platforms</h3>
+    <ul>
+      <li>SolarWinds, Cisco Prime, Grafana</li>
+      <li>ServiceNow (Incident, Change, CMDB)</li>
+      <li>F5 Load Balancer, Riverbed WAN Optimizer</li>
+      <li>Wireshark (Packet Capture & Analysis)</li>
+      <li>Microsoft ICM</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Automation & Scripting</h3>
+    <ul>
+      <li>PowerShell Scripting</li>
+      <li>Python (Basic automation)</li>
+      <li>Script-based Deployments</li>
+      <li>Scheduled Tasks Automation</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Monitoring & Support</h3>
+    <ul>
+      <li>L2/L3 Support, Escalation Handling</li>
+      <li>Incident & Change Management (ITIL-aligned)</li>
+      <li>Preventive Maintenance & RCA</li>
+      <li>Ticketing & SLA Management</li>
     </ul>
   </section>
 
