--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
       padding-bottom: 0.5rem;
       margin-bottom: 1rem;
     }
+
+   .section2 {
+      background: #fff;
+      padding: 2rem;
+      max-width: 900px;
+      margin: 1.5rem auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    h3 {
+      color: #005A9C;
+      border-bottom: 2px solid #1e2a38;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+    }
     .contact a {
       color: #1e2a38;
       text-decoration: none;
@@ -65,7 +80,7 @@
     <h2>Skills</h2>
   </section>
 
-<section>
+<section2>
     <h3>Networking</h3>
     <ul>
       <li>Routing & Switching (BGP, OSPF, VLAN, STP)</li>
@@ -74,18 +89,18 @@
       <li>VPN Setup & Management</li>
       <li>IP Address Management (Infoblox)</li>
     </ul>
-  </section>
+  </section2>
 
-  <section>
+  <section2>
     <h3>Cloud Technologies</h3>
     <ul>
       <li>Microsoft Azure (VMs, VNet Peering, ExpressRoute, Virtual WAN)</li>
       <li>Azure AD, NSG, Load Balancer, Azure Monitor, Log Analytics</li>
       <li>Azure Backup & Snapshot Management</li>
     </ul>
-  </section>
+  </section2>
 
-  <section>
+  <section2>
     <h3>Infrastructure & System Administration</h3>
     <ul>
       <li>Break Fixes, Deployments, Patching</li>
@@ -94,9 +109,9 @@
       <li>Failover & Disaster Recovery</li>
       <li>Backup & Restore Operations</li>
     </ul>
-  </section>
+  </section2>
 
-  <section>
+  <section2>
     <h3>Tools & Platforms</h3>
     <ul>
       <li>SolarWinds, Cisco Prime, Grafana</li>
@@ -105,9 +120,9 @@
       <li>Wireshark (Packet Capture & Analysis)</li>
       <li>Microsoft ICM</li>
     </ul>
-  </section>
+  </section2>
 
-  <section>
+  <section2>
     <h3>Automation & Scripting</h3>
     <ul>
       <li>PowerShell Scripting</li>
@@ -115,9 +130,9 @@
       <li>Script-based Deployments</li>
       <li>Scheduled Tasks Automation</li>
     </ul>
-  </section>
+  </section2>
 
-  <section>
+  <section2>
     <h3>Monitoring & Support</h3>
     <ul>
       <li>L2/L3 Support, Escalation Handling</li>
@@ -125,7 +140,7 @@
       <li>Preventive Maintenance & RCA</li>
       <li>Ticketing & SLA Management</li>
     </ul>
-  </section>
+  </section2>
 
   <section>
     <h2>Experience</h2>
