--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
       padding-bottom: 0.5rem;
       margin-bottom: 1rem;
     }
-
-   .section2 {
+    .section-box {
       background: #fff;
       padding: 2rem;
       max-width: 900px;
       margin: 1.5rem auto;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
     h3 {
       color: #005A9C;
@@ -65,6 +64,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1>Subramanyam Muthyala</h1>
     <p>Senior Network & Cloud Consultant | Azure | Routing & Switching | IT Operations</p>
@@ -80,7 +80,7 @@
     <h2>Skills</h2>
   </section>
 
-<section2>
+  <section class="section-box">
     <h3>Networking</h3>
     <ul>
       <li>Routing & Switching (BGP, OSPF, VLAN, STP)</li>
@@ -89,18 +89,18 @@
       <li>VPN Setup & Management</li>
       <li>IP Address Management (Infoblox)</li>
     </ul>
-  </section2>
+  </section>
 
-  <section2>
+  <section class="section-box">
     <h3>Cloud Technologies</h3>
     <ul>
       <li>Microsoft Azure (VMs, VNet Peering, ExpressRoute, Virtual WAN)</li>
       <li>Azure AD, NSG, Load Balancer, Azure Monitor, Log Analytics</li>
       <li>Azure Backup & Snapshot Management</li>
     </ul>
-  </section2>
+  </section>
 
-  <section2>
+  <section class="section-box">
     <h3>Infrastructure & System Administration</h3>
     <ul>
       <li>Break Fixes, Deployments, Patching</li>
@@ -109,9 +109,9 @@
       <li>Failover & Disaster Recovery</li>
       <li>Backup & Restore Operations</li>
     </ul>
-  </section2>
+  </section>
 
-  <section2>
+  <section class="section-box">
     <h3>Tools & Platforms</h3>
     <ul>
       <li>SolarWinds, Cisco Prime, Grafana</li>
@@ -120,9 +120,9 @@
       <li>Wireshark (Packet Capture & Analysis)</li>
       <li>Microsoft ICM</li>
     </ul>
-  </section2>
+  </section>
 
-  <section2>
+  <section class="section-box">
     <h3>Automation & Scripting</h3>
     <ul>
       <li>PowerShell Scripting</li>
@@ -130,9 +130,9 @@
       <li>Script-based Deployments</li>
       <li>Scheduled Tasks Automation</li>
     </ul>
-  </section2>
+  </section>
 
-  <section2>
+  <section class="section-box">
     <h3>Monitoring & Support</h3>
     <ul>
       <li>L2/L3 Support, Escalation Handling</li>
@@ -140,7 +140,7 @@
       <li>Preventive Maintenance & RCA</li>
       <li>Ticketing & SLA Management</li>
     </ul>
-  </section2>
+  </section>
 
   <section>
     <h2>Experience</h2>
@@ -165,5 +165,6 @@
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
     <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
   </section>
+
 </body>
 </html>
