--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       max-width: 900px;
       margin: auto;
     }
+    section2 {
+          max-width: 900px;
+          margin: auto;
+    }
     h2 {
       border-bottom: 2px solid #1e2a38;
       padding-bottom: 0.5rem;
@@ -30,9 +34,8 @@
     }
     .section-box {
       background: #fff;
-      padding: 2rem;
+      padding: 1rem;
       max-width: 900px;
-      margin: 1.5rem auto;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
@@ -76,9 +79,9 @@
     <a href="resume.pdf" class="resume-button" download>Download Resume</a>
   </section>
 
-  <section>
+   <section2>
     <h2>Skills</h2>
-  </section>
+   </section2>
 
   <section class="section-box">
     <h3>Networking</h3>
