--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
       max-width: 900px;
       margin: auto;
     }
-    section2 {
-          padding: 2rem;
-          max-width: 900px;
-          margin: auto;
-    }
     h2 {
       border-bottom: 2px solid #1e2a38;
       padding-bottom: 0.5rem;
@@ -35,10 +30,10 @@
     }
     .section-box {
       background: #fff;
-      padding: 1.5rem;
+      padding: 2rem;
       max-width: 900px;
       border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
     h3 {
       color: #005A9C;
@@ -80,9 +75,9 @@
     <a href="resume.pdf" class="resume-button" download>Download Resume</a>
   </section>
 
-   <section2>
+   <section>
     <h2>Skills</h2>
-   </section2>
+   </section>
 
   <section class="section-box">
     <h3>Networking</h3>
