--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       background: #fff;
       padding: 2rem;
       max-width: 900px;
+      margin: 1.5rem auto;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
