--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
-    h3 {
+    .skill-subheading {
       color: #005A9C;
-      border-bottom: 2px solid #1e2a38;
-      padding-bottom: 0.5rem;
-      margin-bottom: 1rem;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+      font-weight: bold;
     }
     .contact a {
       color: #1e2a38;
@@ -76,12 +77,10 @@
     <a href="resume.pdf" class="resume-button" download>Download Resume</a>
   </section>
 
-   <section>
-    <h2>Skills</h2>
-   </section>
-
   <section class="section-box">
-    <h3>Networking</h3>
+    <h2>Skills</h2>
+
+    <div class="skill-subheading">Networking</div>
     <ul>
       <li>Routing & Switching (BGP, OSPF, VLAN, STP)</li>
       <li>MPLS, LAN/WAN, WLAN, DNS, DHCP</li>
@@ -89,19 +88,15 @@
       <li>VPN Setup & Management</li>
       <li>IP Address Management (Infoblox)</li>
     </ul>
-  </section>
 
-  <section class="section-box">
-    <h3>Cloud Technologies</h3>
+    <div class="skill-subheading">Cloud Technologies</div>
     <ul>
       <li>Microsoft Azure (VMs, VNet Peering, ExpressRoute, Virtual WAN)</li>
       <li>Azure AD, NSG, Load Balancer, Azure Monitor, Log Analytics</li>
       <li>Azure Backup & Snapshot Management</li>
     </ul>
-  </section>
 
-  <section class="section-box">
-    <h3>Infrastructure & System Administration</h3>
+    <div class="skill-subheading">Infrastructure & System Administration</div>
     <ul>
       <li>Break Fixes, Deployments, Patching</li>
       <li>Health Checks and Firmware Updates</li>
@@ -109,10 +104,8 @@
       <li>Failover & Disaster Recovery</li>
       <li>Backup & Restore Operations</li>
     </ul>
-  </section>
 
-  <section class="section-box">
-    <h3>Tools & Platforms</h3>
+    <div class="skill-subheading">Tools & Platforms</div>
     <ul>
       <li>SolarWinds, Cisco Prime, Grafana</li>
       <li>ServiceNow (Incident, Change, CMDB)</li>
@@ -120,20 +113,16 @@
       <li>Wireshark (Packet Capture & Analysis)</li>
       <li>Microsoft ICM</li>
     </ul>
-  </section>
 
-  <section class="section-box">
-    <h3>Automation & Scripting</h3>
+    <div class="skill-subheading">Automation & Scripting</div>
     <ul>
       <li>PowerShell Scripting</li>
       <li>Python (Basic automation)</li>
       <li>Script-based Deployments</li>
       <li>Scheduled Tasks Automation</li>
     </ul>
-  </section>
 
-  <section class="section-box">
-    <h3>Monitoring & Support</h3>
+    <div class="skill-subheading">Monitoring & Support</div>
     <ul>
       <li>L2/L3 Support, Escalation Handling</li>
       <li>Incident & Change Management (ITIL-aligned)</li>
@@ -144,27 +133,4 @@
 
   <section>
     <h2>Experience</h2>
-    <p><strong>LTIMindtree – Senior Consultant</strong><br />Managing hybrid cloud networks, Azure ExpressRoute, routing issues, NAC, and large enterprise escalations.</p>
-    <p><strong>Capgemini – Network Engineer</strong><br />Handled data center networks, WAN circuits, firewalls, and network automation tasks.</p>
-    <p><strong>Shankar Super Speciality Hospital – Network Admin</strong><br />Maintained hospital IT infra, LAN/WAN, wireless controller, and firewall rules.</p>
-  </section>
-
-  <section>
-    <h2>Certifications</h2>
-    <ul>
-      <li>Azure Fundamentals</li>
-      <li>AWS Cloud Essentials</li>
-      <li>Cloud Infrastructure & Services</li>
-      <li>Networking Foundations</li>
-    </ul>
-  </section>
-
-  <section class="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
-  </section>
-
-</body>
-</html>
+    <p><strong>LTIMindtree – Senior Consultant</strong><br />Managing hybrid cloud networks, Azure ExpressRoute, routing issues, NAC, and large
