--- a/index.html
+++ b/index.html
@@ -133,4 +133,27 @@
 
   <section>
     <h2>Experience</h2>
-    <p><strong>LTIMindtree – Senior Consultant</strong><br />Managing hybrid cloud networks, Azure ExpressRoute, routing issues, NAC, and large
+    <p><strong>LTIMindtree – Senior Consultant</strong><br />Managing hybrid cloud networks, Azure ExpressRoute, routing issues, NAC, and large enterprise escalations.</p>
+    <p><strong>Capgemini – Network Engineer</strong><br />Handled data center networks, WAN circuits, firewalls, and network automation tasks.</p>
+    <p><strong>Shankar Super Speciality Hospital – Network Admin</strong><br />Maintained hospital IT infra, LAN/WAN, wireless controller, and firewall rules.</p>
+  </section>
+
+  <section>
+    <h2>Certifications</h2>
+    <ul>
+      <li>Azure Fundamentals</li>
+      <li>AWS Cloud Essentials</li>
+      <li>Cloud Infrastructure & Services</li>
+      <li>Networking Foundations</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+  </section>
+
+  </body>
+</html>
