--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
     </ul>
   </section>
 
+  <section class="section-box">
+    <h2>Core Responsibilities</h2>
+    <ul>
+      <li>🔹 Break-Fix & Escalation Handling for Network & Azure Cloud Environments</li>
+      <li>🔹 Patching: OS & Firmware Updates, Azure VM Patch Schedules, Device Upgrades</li>
+      <li>🔹 Deployments: Network Devices, Azure Resources, Load Balancers, Site-to-Site VPN</li>
+      <li>🔹 Change Management: RFCs, CAB Meetings, Change Window Execution</li>
+      <li>🔹 Troubleshooting: Routing Loops, DNS Failures, Latency, Packet Drops, ACL Misconfig</li>
+      <li>🔹 Monitoring & Alerts: Proactive Monitoring, SNMP Alerts, Dashboards, Threshold Breaches</li>
+      <li>🔹 Configuration Management: Backup/Restore Configs, Gold Image Maintenance</li>
+      <li>🔹 Post-Incident Review: RCA Analysis, Preventive Actions, Documentation</li>
+    </ul>
+  </section>
+
   <section>
     <h2>Experience</h2>
     <p><strong>LTIMindtree – Senior Consultant</strong><br />Managing hybrid cloud networks, Azure ExpressRoute, routing issues, NAC, and large enterprise escalations.</p>
