--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
   <section class="section-box">
     <h2>Core Responsibilities</h2>
     <ul>
-      <li>🔹 Break-Fix & Escalation Handling for Network and Azure Cloud Environments</li>
-      <li>🔹 Patching: OS and Firmware Updates, Device Upgrades</li>
-      <li>🔹 Deployments: Network Devices, Azure Resources, Load Balancers, Site-to-Site VPNs</li>
-      <li>🔹 Change Management: RFCs, CAB Meetings, Change Window Execution</li>
-      <li>🔹 Troubleshooting: Routing, Switching, DNS Failures, Latency, Packet Drops, ACL/Firewall Rule Misconfigurations, Load Balancing Issues</li>
-      <li>🔹 Monitoring & Alerts: Proactive Monitoring, SNMP Alerts, Dashboards, Threshold Breaches</li>
-      <li>🔹 Configuration Management: Configuration Backup/Restore, Gold Image Maintenance</li>
-      <li>🔹 Post-Incident Review: Root Cause Analysis (RCA), Preventive Actions, Documentation</li>
+      <li>Break-Fix & Escalation Handling for Network and Azure Cloud Environments</li>
+      <li>Patching: OS and Firmware Updates, Device Upgrades</li>
+      <li>Deployments: Network Devices, Azure Resources, Load Balancers, Site-to-Site VPNs</li>
+      <li>Change Management: RFCs, CAB Meetings, Change Window Execution</li>
+      <li>Troubleshooting: Routing, Switching, DNS Failures, Latency, Packet Drops, ACL/Firewall Rule Misconfigurations, Load Balancing Issues</li>
+      <li>Monitoring & Alerts: Proactive Monitoring, SNMP Alerts, Dashboards, Threshold Breaches</li>
+      <li>Configuration Management: Configuration Backup/Restore, Gold Image Maintenance</li>
+      <li>Post-Incident Review: Root Cause Analysis (RCA), Preventive Actions, Documentation</li>
     </ul>
   </section>
 
